Lista persona juridica

--- a/src/app/component/logeado/cambiocontrasenia/cambiocontrasenia.component.less
+++ b/src/app/component/logeado/cambiocontrasenia/cambiocontrasenia.component.less
@@ -1,13 +1,10 @@
 
-.sendMail{
-  height: 170px;
-  width: 240px;
-  border-style: dashed;
-  border-width: 2px;
-  border-color: darkgray;
+
+
+.table {
+  width: 100%;
 }
 
-.mat-card-header {
-  background-color: rgba(255, 255, 255, 0.237);
-  text-align: center;
+table {
+  width: 100%;
 }
