--- a/src/app/component/logeado/cambiocontrasenia/cambiocontrasenia.component.html
+++ b/src/app/component/logeado/cambiocontrasenia/cambiocontrasenia.component.html
@@ -1,76 +1,90 @@
-
 <div class="container">
-  <div class="d-flex justify-content-center mt-5">
-    <mat-card class="card col-lg-5" style="background-color: #ffffffa5;">
-      <form
-      novalidate
-      (ngSubmit)="onSubmit()"
-      [formGroup]="resolvePassword"
-      #myform="ngForm"
-      autocomplete="off"
-     >
 
-      <div class="text-center mt-4">
-        <img src="./assets/images/fsfb.png" alt="Logo fundación" class="logo" />
-      </div>
-      <div class="container">
-        <div class="container mt-5">
-          <h2 style="color: rgba(26,62,156,1); font-weight: bold;">Bienvenido al gestor de contraseñas</h2>
-        </div>
-      </div>
+<mat-card class="container mt-5 card">
+<div class="container">
 
-      <div class="container">
-        <div class="container mt-5">
-          <mat-form-field class="w-100">
-            <mat-label>Tipo de documento</mat-label>
-            <mat-select formControlName="tipoDocumento">
-              <mat-option disabled value="Seleccione">
-                Seleccione un tipo de documento
-              </mat-option>
-              <mat-option value="1">
-                C.C.
-              </mat-option>
-              <mat-option value="2">
-                Nit.
-              </mat-option>
-            </mat-select>
-            <mat-error *ngIf="resolvePassword.get('tipoDocumento').hasError('required') ">
-              Este campo es obligatorio.
-            </mat-error>
-            <!--
-            <mat-error *ngIf="cambioCitas.get('tipoCita').hasError('checkState')">
-              No se puede cambiar al mismo estado de la cita
-            </mat-error>   -->
-          </mat-form-field>
-          </div>
-      </div>
-
-      <div class="container">
-        <div class="container mt-3">
-          <mat-form-field class="w-100">
-            <input matInput placeholder="Ingrese número de documento"  type="text" formControlName="documento"/>
-            <mat-error *ngIf="resolvePassword.get('documento').hasError('required')">
-              Este campo es obligatorio.
-            </mat-error>
-            <mat-error *ngIf="resolvePassword.get('documento').hasError('pattern')">
-              El nombre no puede llevar números.
-            </mat-error>
-            <mat-error *ngIf="resolvePassword.get('documento').hasError('minlength')">
-              La longitud del texto excede el mínimo permitido.
-            </mat-error>
-          </mat-form-field>
-         </div>
-      </div>
-      <div class="container">
-      </div>
-      <div class="container text-right mt-5">
-        <br>
-       <button mat-raised-button class="buttonCA-second mat-raised-button" type="button" (click)="close()">CANCELAR</button>
-       <button mat-raised-button class="buttonCA primary" type="submit" [disabled]="resolvePassword.invalid">GUARDAR</button>
-      </div>
-      <br> <br> <br>
-     </form>
-    </mat-card>
+  <div class="mt-4">
+    <h1> Lista persona jurídica</h1>
   </div>
+
+<div class="container mat-elevation-z8 mt-2">
+  <ng-container *ngIf="!dataTerceros">
+    <br>
+    <mat-spinner style="margin: auto" [diameter]="60"></mat-spinner>
+    <br>
+  </ng-container>
+  <table mat-table [dataSource]="dataSource" *ngIf="dataTerceros">
+
+
+    <!-- userProviderNit Column -->
+    <ng-container matColumnDef="userProviderNit">
+      <th class="text-center" mat-header-cell *matHeaderCellDef> Id proveedor </th>
+      <td class="text-center" mat-cell *matCellDef="let element"> {{element.userProviderNit}} </td>
+    </ng-container>
+
+    <!-- userProviderName Column -->
+    <ng-container matColumnDef="userProviderName">
+      <th class="text-center" mat-header-cell *matHeaderCellDef> Nombres </th>
+      <td class="text-center" mat-cell *matCellDef="let element"> {{element.userProviderName}} </td>
+    </ng-container>
+
+     <!-- UserProviderLastname Column -->
+     <ng-container matColumnDef="UserProviderLastname">
+      <th class="text-center" mat-header-cell *matHeaderCellDef> Apellidos </th>
+      <td class="text-center" mat-cell *matCellDef="let element"> {{element.UserProviderLastname}} </td>
+    </ng-container>
+
+     <!-- providertypeId Column -->
+     <ng-container matColumnDef="providertypeId">
+      <th class="text-center" mat-header-cell *matHeaderCellDef> Tipo persona </th>
+      <td class="text-center" mat-cell *matCellDef="let element"> {{element.providertypeId}} </td>
+    </ng-container>
+
+    <!-- userProviderEmail Column -->
+    <ng-container matColumnDef="userProviderEmail">
+      <th class="text-center" mat-header-cell *matHeaderCellDef> Correo electronico </th>
+      <td class="text-center" mat-cell *matCellDef="let element"> {{element.userProviderEmail}} </td>
+    </ng-container>
+
+
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="symbol">
+      <th class="text-center" mat-header-cell *matHeaderCellDef> Evaluar </th>
+      <td class="text-center" mat-cell *matCellDef="let element">
+        <p type="button" (click)="openDialogAutorizacion(element)" mat-raised-button class="pt-2" style="background-color: rgba(255, 255, 255, 0); color: rgba(255, 255, 255, 0); cursor: pointer;">
+          <i class="material-icons md-18" style="color: black;">done</i>
+        </p>
+      </td>
+    </ng-container>
+
+
+     <!-- evaluationData Column -->
+     <ng-container matColumnDef="evaluationData">
+      <th class="text-center" mat-header-cell *matHeaderCellDef> Evaluación </th>
+      <td class="text-center" mat-cell *matCellDef="let element">
+        <p type="button" (click)="openDialogListaEvaluaciones(element)" mat-raised-button class="pt-2" style="background-color: rgba(255, 255, 255, 0); color: rgba(255, 255, 255, 0); cursor: pointer;">
+          <i class="material-icons md-18" style="color: black;">assignment</i>
+        </p>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+
+  <!--
+  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+  -->
+
+  <mat-paginator #paginatorCitas [pageSizeOptions]="pageSizeOptions"
+                 [length]="length"
+                 [pageSize]="pageSize"
+                 [pageSizeOptions]="pageSizeOptions"
+                 (page)=setPageSizeOptions($event)
+                 showFirstLastButtons>></mat-paginator>
 </div>
-<br> <br> <br>
+</div>
+<br> <br>
+
+</mat-card>
+</div>
