--- a/src/styles.less
+++ b/src/styles.less
@@ -132,7 +132,9 @@ html,body{
     align-items: center;
     justify-content: center;
 }
-
+.mat-form-field-infix{
+    width: 34vw !important;
+}
 .text-center{
     text-align: center;
 }
